fix align

--- a/vars.less
+++ b/vars.less
@@ -125,6 +125,10 @@ tab: colors
         align-self: flex-start;
     }
     
+    .fx-block_own-align_center& {
+        align-self:center;
+    }
+    
     @media (max-width: @min_bp) {
         width:100%;
     }
